--- a/index.html
+++ b/index.html
@@ -12,24 +12,30 @@
 
 	<section>
 		<div class="projects">
-			<div class="project active">
-				<h2>Lorem</h2>
-				<p class="subtitle">Ipsum</p>
-			</div>
-			<div class="project">
+			<ol class="projects-list">
+				<div class="project active">
+					<h2>Lorem</h2>
+					<p class="subtitle">Ipsum</p>
+				</div>
+				<div class="project">
 					<h2>Dolornet</h2>
 					<p class="subtitle">Ipsum</p>
-			</div>
-			<div class="project">
+				</div>
+				<div class="project">
 					<h2>Loremips</h2>
 					<p class="subtitle">Ipsum</p>
-			</div>
+				</div>
+			</ol>
+			
 		</div>
 
 		<div class="visual">
-			<img src="assets/img/mockup.png" alt="mockup">
+			<div class="circle">
+					<img class="mockup-image" src="assets/img/mockup.png" alt="mockup">
+			</div>
 			<button>Voir le projet</button>
 		</div>
+
 	</section>
 
 	<div class="rs"><!-- J'arrive pas à centrer verticalement les icons -->
@@ -45,9 +51,6 @@
 				<img src="assets/icon/linkedin.svg" alt="linkedin">
 			</li>
 		</ul>
-	</div>
-
-	<div class="circle">
 	</div>
 	
 </body>
