--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class="circle">
 					<img class="mockup-image" src="assets/img/mockup.png" alt="mockup">
 			</div>
-			<button>Voir le projettttt</button>
+			<button>Voir le projet</button>
 		</div>
 
 	</section>
